--- a/assts/asst06.adoc
+++ b/assts/asst06.adoc
@@ -1,6 +1,6 @@
 include::header.adoc[]
 
-:title: Assignment 6: 
+:title: Assignment 6: Watch where you point II 
 :Author Initials: ASN
 :Date:    2020-08-15
 :Revision: 0.1
@@ -15,8 +15,9 @@ The goals for this assignment are:
 * Work with pointer-based data structures
 * Strengthen C programming with strings and files
 
-[discrete]
-== Update your repository
+:sectnums:
+
+= Update your repository
 
 Do a *fetch upstream* to obtain the basecode for this assignment. 
 
@@ -30,7 +31,6 @@ Your repository should now contain a new folder named `{ASST}`.
 
 The `fetch` and `merge` commands update your repository with any changes from the original.
 
-:secnums:
 
 = Matching braces 
 
