--- a/index.adoc
+++ b/index.adoc
@@ -16,7 +16,9 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 [.anns]
 
 * Assignment 06 is due Feb 28: link:assts/asst06.html[Assignment 06]: Watch where you point II
-* Lab Feb 25: link:studyguide3.html[Worksheet: Study Guide 3]
+* Assignment 07 is due March 6: link:assts/asst07.html[Assignment 07]: Secret Messages
+* Lab March 2: Code Jam 03
+* Quiz March 4: link:studyguide3.html[Study Guide]
 
 == Course Info
 
