--- a/schedule.adoc
+++ b/schedule.adoc
@@ -62,21 +62,21 @@
 //-----------------------------
 |6
 |February 25, 27 anchor:week06[]
-|*Assembly* 
+|*Bit Ops*
 
-* Read: link:https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture[Section 5, 5.1] 
-* Read: link:https://diveintosystems.org/singlepage/##_assembly_chapter[Chapter 6] 
-* Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
-* link:assts/asst06.[Assignment 06]: Due Feb 28
+* Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.9] 
+* link:assts/asst06.html[Assignment 06]: Due Feb 28
 * Lab Feb 25: Quiz 03 Practice, link:studyguide3.html[Study Guide 3]
 
 //-----------------------------
 |7
 |March 4,6 anchor:week07[]
-|*The operating system, Processes* 
+|*Assembly* 
 
-* Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
-* link:assts/asst07.html[Assignment 07]: Due THURSDAY March 6 **Hardcopy due at Park 200B**
+* Read: link:https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture[Section 5, 5.1] 
+* Read: link:https://diveintosystems.org/singlepage/##_assembly_chapter[Chapter 6] 
+* Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
+* link:assts/asst07.html[Assignment 07]: Due Friday March 7 
 * Lab March 4: **Code Jam 03*
 * Class **Quiz 03**
 
@@ -90,18 +90,18 @@
 //-----------------------------
 |9
 |March 18, 20 anchor:week09[]
-|*Threads I* 
+|*The operating system, Processes* 
 
-* Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
-* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst08.[Assignment 08]: Due March 21 
+* Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
+* link:assts/asst08.html[Assignment 08]: Due THURSDAY March 20 **Hardcopy due at Park 200B**
 * Lab March 18: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
 
 //-----------------------------
 |10
 |March 25, 27 anchor:week10[]
-|*Threads II* 
+|*Threads I* 
 
+* Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
 * link:assts/asst09.[Assignment 09]: Due March 28
 * Lab March 25: **Code Jam 04**
@@ -110,7 +110,7 @@
 //-----------------------------
 |11
 |April 1, 3 anchor:week11[]
-|*Threads III* 
+|*Threads II* 
 
 * link:assts/asst10.[Assignment 10]: Due April 4th
 * Lab April 1: Quiz 05 Practice, link:studyguide5.html[Study Guide 5]
@@ -118,7 +118,7 @@
 //-----------------------------
 |12
 |April 8, 10 anchor:week12[]
-|*Threads IV* 
+|*Threads III* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
 * Class April 10: **Quiz 05**
