--- a/schedule.adoc
+++ b/schedule.adoc
@@ -103,7 +103,7 @@
 
 * Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst09.[Assignment 09]: Due March 28
+* link:assts/asst09.html[Assignment 09]: Due March 28
 * Lab March 25: **Code Jam 04**
 * Class March 27: **Quiz 04**
 
