--- a/schedule.adoc
+++ b/schedule.adoc
@@ -112,7 +112,8 @@
 |April 1, 3 anchor:week11[]
 |*Threads II* 
 
-* link:assts/asst10.[Assignment 10]: Due April 4th
+* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
+* link:assts/asst10.html[Assignment 10]: Due April 4th
 * Lab April 1: Quiz 05 Practice, link:studyguide5.html[Study Guide 5]
 
 //-----------------------------
@@ -121,6 +122,7 @@
 |*Threads III* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
+* link:assts/asst11.[Assignment 11]: Due April 4th
 * Class April 10: **Quiz 05**
 * Lab April 8: **Code Jam 05**
 
