--- a/index.adoc
+++ b/index.adoc
@@ -15,8 +15,9 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
 
-* Lab April 1: Quiz 05 Practice, link:studyguide5.html[Study Guide 5]
-* Assignment 10 is due April 4 link:assts/asst10.html[Assignment 10]: Sending mixed signals
+* link:assts/asst11.html[Assignment 11]: Due April 11th
+* Lab April 8: Code Jam 05
+* Class April 10: **Quiz 05**, link:studyguide5.html[Study Guide 5]
 
 == Course Info
 
